--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/analytics
+spring.datasource.url=jdbc:postgresql://localhost:5432/analytics2
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+# Liquibase configuration
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+
