--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 # Liquibase configuration
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-
+server.address=0.0.0.0
+server.port=8888
